Tue Jan 13 07:30:02 PST 1998 Jay Painter <jpaint@serv.net>
	* gtk/gtkclist.c: minor updates
	* gtk/gtktext.c: you can type in it!  It should also seg-fault *MUCH* less now,
	because editing was never really turned off.  
	* gtk/testgtk.c: changed the gtktext test a little
	* gtk/testgtkrc: removed pixmap background for now, since I intend to break
	that for a while

1998-01-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtktoolbar.c: (gtk_real_toolbar_style_changed): Fixed
	child->icon and child->label == NULL bugs.

	* gtk/gtktoolbar.h: Added some new functions:
		gtk_toolbar_append_widget()
		gtk_toolbar_prepend_widget()
		gtk_toolbar_insert_widget()
	These let the user insert any kind of widget in the toolbar.  Also
	changed the gtk_toolbar_*_item() functions to return a
	GtkWidget * so that the user can do things with the toolbar buttons.

	* gtk/gtktoolbar.c: Now the toolbar supports its own buttons and
	arbitrary widgets as well.  Geometry management has been changed
	accordingly.  Added gtk_toolbar_remove() function, so container
	functionality should be complete now.

	* gtk/testgtk.c (create_toolbar): Added an entry widget to test
	the new toolbar.

	* Most of these changes are adapted from the
	gtk-lupus-970112-0-patch (should be 970112... :-)

Sat Jan  9 20:52:00 PST 1998 Ian Main <imain@gimp.org>
	* gtk/gtkfilesel.c:  Changed a few tests in the path correcting
		function.  Hopefully this helps the filesel stability.

Fri Jan  8 00:55:00 PST 1998 Jay Painter <jpaint@serv.net>
	* gtk/gtkclist.c:
	* gtk/gtkclist.h: modifications to GtkCList so it's look and 
	feel is the same as scrolled windows.

Thu Jan  8 17:56:09 PST 1998 Manish Singh <yosh@gimp.org>

	* glib/gscanner.c
	* gtk/gtclist.c
	* config.h.in
	* configure.in: added test for inline and put the inline keywords
	back in

	* gtk/gtklabel.c: made the prototypes match the definitions

	* gtk/fnmatch.c: minor change to make sure the right config.h
	gets included
	