@@ -1,3 +1,8 @@
+Thu Jan 15 00:44:27 PST 1998 Jay Painter <jpaint@serv.net>
+	* gtk/gtkentry.[ch]: Change window cursor to "I"
+	* gtk/gtkpane.[ch]: Cleared up a tiny memory leak from not destroying the
+	cursor
+
 Tue Jan 13 07:30:02 PST 1998 Jay Painter <jpaint@serv.net>
 	* gtk/gtkclist.c: minor updates
 	* gtk/gtktext.c: you can type in it!  It should also seg-fault *MUCH* less now,
